--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,3 +1,10 @@
 * {
     font-family: cascadia;
 }
+
+#banner {
+    border: 1px solid red;
+    border-radius: 15px;
+    color: blueviolet;
+    text-align: center;
+}
